# loan-contracts

./: README.md
contracts/identity/: Cargo.toml
contracts/identity/schema/: identity.json
contracts/identity/src/: error.rs  exec.rs  identity.rs  identity_tests.rs  instantiate.rs  lib.rs  loan_tests.rs  models.rs  msg.rs  query.rs  states.rs  test_pub_privatekey.rs  tests.rs
schema/: identity.json
schema/raw/: execute.json  query.json  response_to_get_all_reviewer_statistics.json  response_to_get_loan_details.json  response_to_get_loan_statistics.json  response_to_get_loans_for_user.json  response_to_get_reviewer_templates.json  response_to_user_info.json  response_to_user_info_all.json
