[package]
name = "identity"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
cosmwasm-std = "2.1.4"
cosmwasm-schema = "2.1.4"
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
schemars = "0.8.21"
serde = "1.0.203"
thiserror = "1.0.61"
ed25519-dalek = "2.1.1"
rand = "0.8.5"
ring = "0.17.8"

[dev-dependencies]
cw-multi-test = "0.13.4"
